# old_pilot_repo

./: .bazelrc  .bazelrc.jenkins  .gitignore  .travis.yml  0001-wip.patch  BUILD  Gopkg.toml  Jenkinsfile  Makefile  OWNERS  README.md  Vagrantfile  WORKSPACE  cc_requirements  codecov.info  codecov.report  codecov.requirement  coverage.txt  gen.sh  glide.yaml  istio.deps  kube-inject-versions  profile.out
.circleci/: config.yaml  config.yml
apiserver/: BUILD  apiserver.go  apiserver_test.go  config.go  handler.go  handlers.go
bookinfo_istio/: README.md
client/: client.go  client_test.go  config.go  config_test.go  proxy.go  proxy_test.go
cmd/: BUILD  cmd.go  main.go  root.go
doc/: build-vagrant.md  build.md  configuration-flow.md  design.md  istio-auth.md  proxy-controller.md  proxy-injection.md  proxy-redirection-configuration.md  service-registry.md  testing.md
docker/: .gitignore  BUILD  Dockerdiff  Dockerfile.app  Dockerfile.debug  Dockerfile.eurekamirror  Dockerfile.iptables_centos  Dockerfile.proxy  Dockerfile.proxy_debug  Dockerfile.proxy_init_centos  Dockerfile.proxy_init_ubuntu  debug_docker.bzl  envoy_egress_auth.json  envoy_ingress.json  envoy_proxy.json  envoy_proxy_auth.json  nginx.conf  prepare_proxy.sh  prepare_proxy_test.sh  prepare_proxy_test.yaml  release-docker  start.sh  testmixer
jobs/: pilot-presubmit.sh
model/: .gitignore  BUILD  config.go  config_test.go  controller.go  conversion.go  conversion_test.go  error.go  errors.go  mock_config_gen_test.go  registry.go  secret.go  service.go  service_test.go  validation.go  validation_test.go
prow/: pilot-coverage.sh  pilot-e2e-smoketest.sh  pilot-postsubmit.sh  pilot-presubmit.sh
proxy/: BUILD  agent.go  agent_test.go  context.go  context_test.go  net.go  resolve.go
scripts/: init.sh
test/: BUILD  mocks.go
test/local/: BUILD.bazel  main.go
test/mixer/: BUILD  BUILD.bazel  server.go  wordlist_process.sh
test/mixer/cmd/: BUILD.bazel  main.go
test/mixer/pb/: BUILD.bazel  proto_process.sh
test/mixer/wordlist/: wordlist_process.sh
test/server/: BUILD  BUILD.bazel  echo.go
test/server/main/: BUILD.bazel  main.go
toolbox/: README.md
tools/: bazel.rc
(+528 files in other folders)
