load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    visibility = ["//visibility:private"],
    deps = [
        "//model:go_default_library",
        "//proxy:go_default_library",
        "//proxy/envoy:go_default_library",
        "//test/server:go_default_library",
    ],
)

go_binary(
    name = "local",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
