load("@io_bazel_rules_go//proto:go_proto_library.bzl", "go_proto_library")

alias(
    name = "protos",
    actual = "@io_istio_api//:mixer",
)

go_proto_library(
    name = "go_default_library",
    srcs = [":protos"],
    has_services = 1,
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//ptypes/any:go_default_library",
        "@com_github_golang_protobuf//ptypes/duration:go_default_library",
        "@com_github_golang_protobuf//ptypes/wrappers:go_default_library",
        "@com_github_gogo_protobuf//gogoproto:go_default_library",
    ],
)

